# CSUB-SolutionsConsultingWorkflow

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLIENT-BRIEF.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  (+9 more)
services/review-agent/: Makefile  README.md  pyproject.toml
services/review-agent/scripts/: canary_vendor_invitation.py  smoke_agents.py  smoke_bedrock.py  smoke_resume.py  smoke_storage.py  smoke_vendor_portal.py
services/review-agent/src/review_agent/: __init__.py  api.py  config.py  demo.py  lambda_api.py  samples.py  server.py  timestamps.py
services/review-agent/src/review_agent/adapters/: __init__.py  cases_repository.py  email.py  extraction.py  model.py  notifications.py  servicenow.py  storage.py
services/review-agent/src/review_agent/audit/: __init__.py  log.py
services/review-agent/src/review_agent/contracts/: __init__.py  audit.py  case.py  common.py  evidence.py  graph_state.py  packet.py  policy.py  schema.py  servicenow.py  software.py  vendor.py
services/review-agent/src/review_agent/evidence/: __init__.py  extraction.py  ingestion.py  lambda_processor.py  validation.py
services/review-agent/src/review_agent/ingestion/: __init__.py  manifest.py  software_workbook.py
services/review-agent/src/review_agent/institutional/: __init__.py  __main__.py  classification.py  normalize.py  untrusted.py
services/review-agent/src/review_agent/lookup/: __init__.py  approved_software.py
services/review-agent/tests/: _bootstrap.py  test_adaptive_requirements.py  test_api.py  test_approved_software_lookup.py  test_bedrock_model.py  test_canary_vendor_invitation.py  test_checkpointer.py  test_citations.py  test_contracts_and_audit.py  test_demo_workflow.py  test_email_adapter.py  test_evidence_ingestion.py  test_evidence_validation.py  test_expiry_monitoring.py  test_ingestion.py  test_institutional_sources.py  test_lambda_api.py  test_langgraph_binding.py  test_local_catalog_seed.py  test_metrics.py  test_mock_servicenow.py  test_model_retry.py  test_notification_adapter.py  test_policy_criteria.py  test_policy_engine.py  test_research_factory.py  test_storage_and_cases.py  test_vendor_backend.py  test_vendor_catalog_api.py  test_vendor_http_api.py  test_vendor_link_settings.py  test_vendor_portal.py  test_vendor_reminders.py  test_vendor_research_integration.py  test_vendor_research_provenance.py  test_vendor_research_ssrf.py  test_vendor_resubmission.py  test_vendor_status.py  test_vendor_thread.py  test_vendor_workflow.py  (+1 more)
(+158 files in other folders)
